Skia (0.38.2-2)

  * Removed the /Skia suffix from libdir.
  * Removed uninstaller.sh.

 -- Eduardo Hopperdietzel <ehopperdietzel@gmail.com>  Sat, 21 Dec 2024 01:16:05 -0300


Skia (0.38.2-1)

  * First release.

 -- Eduardo Hopperdietzel <ehopperdietzel@gmail.com>  Sat, 02 Nov 2024 14:52:52 -0300