@@ -1,6 +1,6 @@
-%global basever 0.38.2
+%global basever 134.0.0
 %global origrel 2
-%global somajor 0
+%global somajor 134
 
 Name:           cuarzo-skia
 Version:        %{basever}%{?origrel:_%{origrel}}
@@ -56,20 +56,18 @@ SK_ARCH=%{_arch} SK_PREFIX=%{buildroot} SK_LIBDIR=%{_libdir} SK_INCDIR=%{_includ
 %files
 %license repo/LICENSE
 %doc repo/BUILD repo/CHANGES repo/VERSION
-%{_libdir}/libcompression_utils_portable.a
-%{_libdir}/libdng_sdk.a
-%{_libdir}/libpathkit.a
-%{_libdir}/libpiex.a
-%{_libdir}/libskcms.a
-%{_libdir}/libskresources.a
-%{_libdir}/libwuffs.a
-%{_libdir}/libskia.so
-%{_libdir}/libskottie.so
+%{_libdir}/libbentleyottmann.so
 %{_libdir}/libskparagraph.so
-%{_libdir}/libsksg.so
-%{_libdir}/libskshaper.so
-%{_libdir}/libsktext.so
-%{_libdir}/libskunicode.so
+%{_libdir}/libskunicode_core.so
+%{_libdir}/libskia.so
+%{_libdir}/libskshaper.so 
+%{_libdir}/libskunicode_icu.so
+%{_libdir}/libcompression_utils_portable.a 
+%{_libdir}/libpathkit.a 
+%{_libdir}/libskcms.a
+%{_libdir}/libdng_sdk.a
+%{_libdir}/libpiex.a 
+%{_libdir}/libwuffs.a
 
 %files devel
 %doc repo/README.md
@@ -77,6 +75,6 @@ SK_ARCH=%{_arch} SK_PREFIX=%{buildroot} SK_LIBDIR=%{_libdir} SK_INCDIR=%{_includ
 %{_libdir}/pkgconfig/Skia.pc
 
 %changelog
-* Sat Dec 21 2024 Eduardo Hopperdietzel <ehopperdietzel@gmail.com> - %{basever}-%{origrel}
-- Removed the /Skia suffix from libdir.
-- Removed uninstaller.sh.
+* Sat Feb 15 2025 Eduardo Hopperdietzel <ehopperdietzel@gmail.com> - %{basever}-%{origrel}
+- Sources are now obtained from a specific commit in the main branch, as indicated by the COMMIT file.
+- Added missing compiler flags to Skia.pc to enable ICU support for SkParagraph.
